Added Product And Customer Api

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -4,5 +4,30 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "IdentityConnections": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=UserDatabase;Integrated Security=True"
+
+  },
+  "AppSettings": {
+    "Name": "Aniket",
+    "FromAddress": "PrivateUser@gmail.com",
+    "ToAddress": "kambleaniket17@gmail.com",
+    "SmtpClient": "smtp.gmail.com",
+    "UserId": "privateuser1199@gmail.com",
+    "Password": "private252",
+    "SMTPPort": "587",
+    "EnableSSL": "Yes",
+    "IdentityConnections": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=UserDatabase;Integrated Security=True",
+    "JWT_Secret": "1234567890123456"
+  },
+  "MyData": {
+    "ToAddress": "kambleaniket17@gmail.com",
+    "SmtpClient": "smtp.gmail.com",
+    "UserId": "privateuser1199@gmail.com",
+    "Password": "aniket123",
+    "SMTPPort": "587",
+    "EnableSSL": "Yes"
+  }
+
 }
