--- a/WebProduct/Properties/launchSettings.json
+++ b/WebProduct/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:65357",
-      "sslPort": 44355
+      "applicationUrl": "http://localhost:54643",
+      "sslPort": 44350
     }
   },
   "profiles": {
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "WebApplication11": {
+    "WebProduct": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
